_generated-doc/1.11/config/quarkus-container-image-docker.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-container-image-docker_configuration]]link:#quarkus-container-image-docker_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.dockerfile-jvm-path]]`link:#quarkus-container-image-docker_quarkus.docker.dockerfile-jvm-path[quarkus.docker.dockerfile-jvm-path]`

[.description]
--
Path to the the JVM Dockerfile. If not set $++{++project.root++}++/src/main/docker/Dockerfile.jvm will be used If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.dockerfile-native-path]]`link:#quarkus-container-image-docker_quarkus.docker.dockerfile-native-path[quarkus.docker.dockerfile-native-path]`

[.description]
--
Path to the the JVM Dockerfile. If not set $++{++project.root++}++/src/main/docker/Dockerfile.native will be used If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.cache-from]]`link:#quarkus-container-image-docker_quarkus.docker.cache-from[quarkus.docker.cache-from]`

[.description]
--
Images to consider as cache sources. Values are passed to `docker build` via the `cache-from` option
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.executable-name]]`link:#quarkus-container-image-docker_quarkus.docker.executable-name[quarkus.docker.executable-name]`

[.description]
--
Name of binary used to execute the docker commands.
--|string 
|`docker`


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.build-args-build-args]]`link:#quarkus-container-image-docker_quarkus.docker.build-args-build-args[quarkus.docker.build-args]`

[.description]
--
Build args passed to docker via `--build-arg`
--|`Map<String,String>` 
|

|===